--- a/sesion2/Colecciones.ipynb
+++ b/sesion2/Colecciones.ipynb
@@ -594,7 +594,7 @@
     }
    ],
    "source": [
-    "fibi = [1,1]\n",
+    "fibi = [1, 1]\n",
     "\n",
     "while len(fibi) < 20:\n",
     "  s = fibi[-1] + fibi[-2]\n",
@@ -2350,7 +2350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
