--- a/sesion4/Proeycto 1.ipynb
+++ b/sesion4/Proeycto 1.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -129,21 +129,7 @@
      "output_type": "stream",
      "text": [
       " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [05/Dec/2020 13:05:20] \"GET /stock/product/count/124 HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "product_id 124 6\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [05/Dec/2020 13:05:23] \"GET /stock/product/count/123 HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [05/Dec/2020 13:15:48] \"GET /stock/product/count/123 HTTP/1.1\" 200 -\n"
      ]
     },
     {
@@ -157,28 +143,42 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [05/Dec/2020 13:05:26] \"GET /stock/product/count/126 HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [05/Dec/2020 13:15:50] \"GET /stock/product/count/124 HTTP/1.1\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "product_id 126 6\n"
+      "product_id 124 5\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [05/Dec/2020 13:05:28] \"GET /stock/product/count/125 HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [05/Dec/2020 13:15:52] \"GET /stock/product/count/125 HTTP/1.1\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "product_id 125 6\n"
+      "product_id 125 15\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [05/Dec/2020 13:15:53] \"GET /stock/product/count/126 HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "product_id 126 0\n"
      ]
     }
    ],
@@ -200,7 +200,7 @@
     "\n",
     "@app.route(\"/stock/product/count/<product_id>\")\n",
     "def stock_product_count(product_id):\n",
-    "    print(\"product_id\", product_id, craft.stock_count_product_by_id(stock, 123))\n",
+    "    print(\"product_id\", product_id, craft.stock_count_product_by_id(stock, int(product_id)))\n",
     "    return f\"{craft.stock_count_product_by_id(stock, int(product_id))}\"\n",
     "\n",
     "app.run(port=5000)"
